--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
 
       <a href="#">
-        <h1 class="logo">Ashish Thakur</h1>
+        <h1 class="logo">Ashish</h1>
       </a>
 
       <button class="nav-toggle-btn" aria-label="Toggle Menu" data-nav-toggle-btn>
