--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
 
             <li>
-              <a href="https://jayeshvagh11.github.io/studentshuttle/" target="_blank" class="portfolio-card" style="background-image: url('./assets/images/portfolio-1.jpg')">
+              <a href="https://github.com/ashishthakur58/transportation" target="_blank" class="portfolio-card" style="background-image: url('./assets/images/portfolio-1.jpg')">
                 <div class="card-content">
             
                   <p class="card-subtitle">StudentShuttle</p>
