--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
               </a>
             </li> -->
             
-            <li>
+            <!-- <li>
               <a href="https://drive.google.com/drive/folders/1-27ZYkm_Qh5Ym59nzhP4kiHflSK2lwPB" target="_blank" class="portfolio-card" style="background-image: url('./assets/images/portfolio-4.jpg')">
                 <div class="card-content">
             
@@ -451,7 +451,7 @@
 
           </ul>
 
-          <a href="https://github.com/jayeshvagh11" target="_blank" id="buttons" class="btn btn-primary blue">More</a>
+          <a href="https://github.com/jayeshvagh11" target="_blank" id="buttons" class="btn btn-primary blue">More</a> -->
 
         </div>
       </section>
