--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </li>
 
             <li>
-              <a href="https://hoiseryweb.netlify.app/" target="_blank" class="portfolio-card" style="background-image: url('./assets/images/hoisery.jpg')">
+              <a href="https://aashian.netlify.app/#" target="_blank" class="portfolio-card" style="background-image: url('./assets/images/hoisery.jpg')">
                 <div class="card-content">
             
                   <p class="card-subtitle">Hoisery Website</p>
