--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </li> -->
 
           <li>
-            <a href="https://drive.google.com/file/d/12YVAWTzblwmduy2Pm4hZ1zX2KXzGISQ6/view?usp=share_link" target="_blank" class="btn btn-primary">Download CV</a>
+            <a href="https://docs.google.com/document/d/1DGKDh2A_iSx8szxUafUFXRMiqDtDtE5G/edit?usp=sharing&ouid=101492366319758451569&rtpof=true&sd=true" target="_blank" class="btn btn-primary">Download CV</a>
           </li>
 
         </ul>
