--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </li> -->
 
           <li>
-            <a href="https://docs.google.com/document/d/1DGKDh2A_iSx8szxUafUFXRMiqDtDtE5G/edit?usp=sharing&ouid=101492366319758451569&rtpof=true&sd=true" target="_blank" class="btn btn-primary">Download CV</a>
+            <a href="https://drive.google.com/file/d/1Hj5qHlzj9MXjz6wsDx3yiYgrcgPN3Mm_/view?usp=sharing" target="_blank" class="btn btn-primary">Download CV</a>
           </li>
 
         </ul>
