--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
             <div class="wrapper">
 
-              <form action="" class="contact-form" netlify>
+              <form action="mailto: ashishofficial199@gmail.com" class="contact-form" netlify>
 
                 <input type="text" name="name" placeholder="Name" required class="contact-input">
 
